# svn2git

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
svn2git/: __init__.py  app.py
